--- a/electron/index.html
+++ b/electron/index.html
@@ -1,50 +1,151 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>spotwire</title>
-  <style>
-    body {
-      margin: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      background-color: #1a202c; /* Tailwind's gray-900 */
-      color: white;
-      font-family: sans-serif;
-    }
-    .container {
-      text-align: center;
-    }
-    .btn {
-      display: inline-block;
-      margin: 0.5rem;
-      padding: 0.75rem 1.5rem;
-      background-color: #48bb78; /* Tailwind's green-500 */
-      border-radius: 0.5rem;
-      text-decoration: none;
-      color: white;
-      font-size: 1.125rem;
-      transition: background-color 0.2s;
-    }
-    .btn:hover {
-      background-color: #38a169; /* Tailwind's green-600 */
-    }
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>spotwire</h1>
-    <a id="spotify-login" class="btn" href="#">Log in with Spotify</a>
-    <a id="instructions" class="btn" href="instructions.html">Instructions</a>
-  </div>
-  <script src="renderer.js"></script>
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Spotwire Electron</title>
+    <!-- Load React and ReactDOM from CDN -->
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    <!-- Babel for in-browser JSX transformation (development only) -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="text/babel">
+      const { useEffect, useState } = React;
+
+      // Generate the Spotify login URL using env variables if available.
+      function generateSpotifyLoginUrl() {
+        // Accessing process.env is possible here because nodeIntegration is enabled.
+        const clientId = process.env.SPOTIFY_CLIENT_ID || 'YOUR_SPOTIFY_CLIENT_ID';
+        const redirectUri = process.env.SPOTIFY_REDIRECT_URI || 'spotwire://callback';
+        const scope = [
+          "ugc-image-upload",
+          "user-read-playback-state",
+          "user-modify-playback-state",
+          "user-read-currently-playing",
+          "streaming",
+          "app-remote-control",
+          "playlist-read-private",
+          "playlist-read-collaborative",
+          "playlist-modify-private",
+          "playlist-modify-public",
+          "user-follow-modify",
+          "user-follow-read",
+          "user-read-playback-position",
+          "user-top-read",
+          "user-read-recently-played",
+          "user-library-modify",
+          "user-library-read",
+          "user-read-email",
+          "user-read-private",
+        ];
+        const params = new URLSearchParams({
+          client_id: clientId,
+          response_type: "code",
+          redirect_uri: redirectUri,
+          scope: scope.join(" "),
+        });
+        return `https://accounts.spotify.com/authorize?${params.toString()}`;
+      }
+
+      function Home() {
+        useEffect(() => {
+          // Check if we already have an access token stored.
+          const token = localStorage.getItem('spotify_access_token');
+          if (token) {
+            window.location.hash = '#profile';
+          }
+        }, []);
+
+        function handleLogin() {
+          const loginUrl = generateSpotifyLoginUrl();
+          if (window.require) {
+            const { shell } = window.require('electron');
+            shell.openExternal(loginUrl);
+          } else {
+            window.open(loginUrl, '_blank');
+          }
+        }
+
+        return (
+          <div style={{ textAlign: 'center', marginTop: '100px' }}>
+            <h1>spotwire</h1>
+            <button onClick={handleLogin}>Login with Spotify</button>
+          </div>
+        );
+      }
+
+      function Profile() {
+        const [playlists, setPlaylists] = useState([]);
+        const [loading, setLoading] = useState(true);
+        const accessToken = localStorage.getItem('spotify_access_token');
+
+        useEffect(() => {
+          if (accessToken) {
+            fetch('https://api.spotify.com/v1/me/playlists', {
+              headers: {
+                'Authorization': `Bearer ${accessToken}`
+              }
+            })
+            .then(response => response.json())
+            .then(data => {
+              setPlaylists(data.items || []);
+              setLoading(false);
+            })
+            .catch(error => {
+              console.error("Error fetching playlists", error);
+              setLoading(false);
+            });
+          }
+        }, [accessToken]);
+
+        return (
+          <div style={{ textAlign: 'center', marginTop: '100px' }}>
+            <h1>Profile Page</h1>
+            <p>You are logged in with Spotify.</p>
+            {loading ? (
+              <p>Loading playlists...</p>
+            ) : playlists.length > 0 ? (
+              <ul style={{ listStyle: 'none' }}>
+                {playlists.map(playlist => (
+                  <li key={playlist.id}>
+                    <strong>{playlist.name}</strong>
+                  </li>
+                ))}
+              </ul>
+            ) : (
+              <p>No playlists found.</p>
+            )}
+          </div>
+        );
+      }
+
+      function App() {
+        const [page, setPage] = useState(window.location.hash);
+
+        useEffect(() => {
+          const onHashChange = () => setPage(window.location.hash);
+          window.addEventListener('hashchange', onHashChange);
+          return () => window.removeEventListener('hashchange', onHashChange);
+        }, []);
+
+        return page === '#profile' ? <Profile /> : <Home />;
+      }
+
+      // Listen for the access token sent from the main process.
+      if (window.require) {
+        const { ipcRenderer } = window.require('electron');
+        ipcRenderer.on('access-token', (event, token) => {
+          console.log('Received access token in renderer:', token);
+          localStorage.setItem('spotify_access_token', token);
+          window.location.hash = '#profile';
+        });
+      }
+
+      ReactDOM.render(<App />, document.getElementById('app'));
+    </script>
+  </body>
 </html>
 
